samples/_failures_safe/1761317187_4d5790_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e858bdfa.c: In function ‘tokenize_string’:
./samples/SAFE/__tmp_e858bdfa.c:174:17: error: expected declaration or statement at end of input
  174 |                 buffer_pos = 0;
      |                 ^~~~~~~~~~
./samples/SAFE/__tmp_e858bdfa.c:174:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e858bdfa.c:174:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e858bdfa.c:174:17: error: expected declaration or statement at end of input
